# lingbot-vision-demos

./: .gitignore  README.md  download_models.py  pyproject.toml  requirements.txt  video_scribble.py
scripts/: run_pca_demo.sh
