[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lingbot-vision"
version = "0.1.0"
description = "Inference and PCA visualization utilities for LingBot-Vision backbones"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "LingBot-Vision Contributors"},
]
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "opencv-python-headless",
  "pillow",
  "omegaconf",
  "huggingface_hub",
]

[project.urls]
Homepage = "https://technology.robbyant.com/lingbot-vision"
Repository = "https://github.com/robbyant/lingbot-vision"
Weights = "https://huggingface.co/collections/robbyant/lingbot-vision"

[tool.setuptools.packages.find]
include = ["lingbot_vision*"]

[tool.setuptools.package-data]
lingbot_vision = ["configs/*.yaml"]
